--- a/account/templates/base_slim.html
+++ b/account/templates/base_slim.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>{% block title %}{% endblock %}</title>
     <base target="_parent"> <!-- Open links in iframe window in the parent window !-->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base_slim.css' %}"/>
 {% block css %}{% endblock %}
 </head>
 <body>
