migrations not working, saving for the css changes

--- a/account/templates/base_slim.html
+++ b/account/templates/base_slim.html
@@ -7,7 +7,7 @@
     <base target="_parent"> <!-- Open links in iframe window in the parent window !-->
     <link rel="stylesheet" type="text/css" href="{% static 'css/base_slim.css' %}"/>
 {% block css %}{% endblock %}
-</head>
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css" integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous"></head>
 <body>
     <div id="content">
         {% block content %}
