--- a/club/templates/club/list_view.html
+++ b/club/templates/club/list_view.html
@@ -3,6 +3,10 @@
 {% load thumbnail %}
 {% block title %}All clubs{% endblock %}
 {% block content %}
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{% static 'club/css/list_view.css' %}?20200417"/>
+{% endblock %}
+
 
 <div class="add-club">
     <a href="{% url 'club:create_group'%}">Add Group</a>
@@ -22,19 +26,12 @@
                      <a class="club-name" href="{{ club.get_absolute_url }}">{{ club.group_name }}</a>
                 </li>
 
-                <li class="inner-li">
+                <li class="inner-li ">
                      {% if club.current_book %}
                     <span class="current-book">{{ club.current_book }}</span>
                     {% else %}
                     <span class="current-book">No current book</span>
                     {% endif %}
-                </li>
-
-                <li class="inner-li">
-                    <span class="count">
-                        <span class="total">{{ club.group_members.count }}
-                            member{{ club.group_members.count | pluralize }}</span>
-                    </span>
                 </li>
 
                 <li class="inner-li">
@@ -48,10 +45,17 @@
                 {% endif %}
                     </a>
                 </li>
+
+                <li class="inner-li inline">
+                    <span class="count">
+                        <span class="total">{{ club.group_members.count }}</span>
+                        member{{ club.group_members.count | pluralize }}
+                    </span>
+                </li>
+
+                
+
             </ul>
-
-
-
         </li>
     </div>
     {% endfor %}
@@ -65,8 +69,7 @@
         var target = e.target;
         console.log(target);
 
-        var member_counter = $(target.parentNode).find("span.count");
-
+        var member_counter = $(target.parentNode).next().find("span.total");
 
         $.post('{% url "club:toggle" %}',
         {
@@ -78,8 +81,11 @@
         if (data['status'] == 'ok') {
             var previous_action = $(target).data('action');
 
+
             // toggle data-action
             $(target).data('action', previous_action == 'join' ? 'leave' : 'join');
+
+
 
             // toggle link text
             $(target).text(previous_action == 'join' ? 'Leave' : 'Join');
